# VisoryChallenge

./: README.md  docker-compose.yml
frontend/: Dockerfile
frontend/vis-frontend/: package.json  pnpm-lock.yaml
frontend/vis-frontend/src/lib/components/: eventCard.svelte
frontend/vis-frontend/src/lib/types/: event.ts
frontend/vis-frontend/src/routes/: +layout.svelte  +page.svelte
visory/: .envrc  .isort.cfg  Dockerfile  pyproject.toml
visory/api/: main.py
visory/api/_shared/dependency/: request.py
visory/api/_shared/utils/: error_wrapper.py  logger.py
visory/api/config/: __init__.py  settings.py
visory/api/event/: router.py  schema.py
visory/api/event/utils/: geolocator.py  request.py
visory/test/: conftest.py
visory/test/event/utils/: test_geolocator.py  test_request.py
