[tool.poetry]
name = "visory"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.3"
geopy = "^2.4.0"
httpx = "^0.25.1"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-xdist = "^3.4.0"
pytest-sugar = "^0.9.7"
isort = "^5.12.0"
black = "^23.11.0"
pyright = "^1.1.334"
greenlet = "^3.0.1"
requests-mock = "^1.11.0"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath="./"
minversion = "6.0"
addopts = "-n 4 -p no:warnings"
console_output_style = "progress"
asyncio_mode = "auto"
markers = [
    "db: marks tests as needing databases (deselect with '-m \"not db\"')",
    "parallel",
    "factory: marks tests as needing factories (deselect with '-m \"not factory\"')",
    "parallel",
    "slow: marks tests that will be slow (deselect with '-n \"now slow\"')",
    "serial"
]
